# studytracker-docker-learning

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-no-postgres.yml  ci-postgres.yml
code-docs/: 📋 StudyTracker – API Schemas & Error Envelope.md  📋 StudyTracker – Alternate Backends (Flask & Express).md  📋 StudyTracker – CI Workflow (GitHub Actions).md  📋 StudyTracker – Core FastAPI Service (Copy-Paste-Ready).md  📋 StudyTracker – Database & Models (Copy-Paste Ready).md  📋 StudyTracker – Docker & Compose (Copy-Paste Ready).md  📋 StudyTracker – Env & Settings (Copy-Paste Ready).md  📋 StudyTracker – FastAPI Wiring (DB + Schemas + Errors).md  📋 StudyTracker – Testing & Quality (Copy-Paste Ready).md
docker/: Dockerfile.web-fastapi  docker-compose.yml
docs/: ✅ StudyTracker – Titanium 10+ Validation Checklist.md  📁 Alternate Backends (Flask & Express).md  📁 Docker & Compose Layout.md  📁 FastAPI Backend (Primary).md  📁 Testing & Quality Tooling.md  📘 Docker Fundamentals for StudyTracker.md
papers/: 📄 StudyTracker Docker Learning Paper.md  📄 StudyTracker – Conference Paper Version.md  📄 StudyTracker – Internal Whitepaper Version.md  📄 StudyTracker – Journal Article Version.md  📄 StudyTracker – Technical Blog Version.md  📑 StudyTracker – Talk & Slide Deck.md
src/app/: bootstrap_db.py  database.py  main.py  main_inmemory.py  main_postgres.py  (+3 more)
tests/: test_healthz.py  test_topics.py
(+9 files in other folders)
