[project]
name = "studytracker-docker-learning"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg2-binary",
  "pydantic",
  "pytest",
  "httpx",
  "black",
  "isort",
  "flake8"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
